--- a/Back_App/try01/src/main/resources/application.properties
+++ b/Back_App/try01/src/main/resources/application.properties
@@ -17,5 +17,9 @@ spring.mvc.view.suffix = .jsp
 spring.mvc.static-path.pattern=/resources/**
 
 
-
-
+# That's how we declare the ssl certificate.
+server.port = 8443
+server.ssl.key-alias=testtest
+server.ssl.key-store-password=fir3w4ll
+server.ssl.key-store=classpath:kostix.p12
+server.ssl.key-store-type=PKCS12
