( 25-11-2019 ) : Insert Data into mySql DB / Added custom error controller / Minor file refactoring.

--- a/Back_App/try01/src/main/resources/application.properties
+++ b/Back_App/try01/src/main/resources/application.properties
@@ -12,14 +12,19 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # for production validate
 # spring.jpa.hibernate.ddl-auto = update
 
+# VIEW RESOLVER CONFIG
 spring.mvc.view.prefix = /WEB-INF/jsp/
 spring.mvc.view.suffix = .jsp
 spring.mvc.static-path.pattern=/resources/**
 
 
-# That's how we declare the ssl certificate.
-server.port = 8443
-server.ssl.key-alias=testtest
-server.ssl.key-store-password=fir3w4ll
-server.ssl.key-store=classpath:kostix.p12
-server.ssl.key-store-type=PKCS12
+# Disable whitelabel error of SPring Boot.
+server.error.whitelabel.enabled=false
+
+
+
+# HOW-TO declare the ssl certificate. ! ! 
+#server.ssl.key-alias=testtest
+#server.ssl.key-store-password=kostikos
+#server.ssl.key-store=classpath:.keystore
+#server.ssl.key-store-type=PKCS12
